# agent-hub-linux

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SESSION_BUGS.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/hooks/: useKeyboard.ts  useSearch.ts  useSessions.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: vault.ts
frontend/src/store/: git.ts  hiddenSessions.ts  hosts.ts  notifications.ts  providers.ts  search.ts  sessions.ts  settings.ts  stats.ts
frontend/src/types/: generated.ts  hosts.ts  session.ts
src/agent_hub/: __init__.py  main.py  provider.py
src/agent_hub/api/: __init__.py  app.py
tests/: conftest.py
tests/test_api/: test_git_routes.py  test_hosts_routes.py  test_search_routes.py  test_sessions_routes.py  test_settings_routes.py  test_stats_routes.py  test_terminal_routes.py  test_websocket.py
tests/test_integration/: test_session_monitoring_flow.py
tests/test_models/: test_dev_server.py  test_diff_comment.py  test_git_diff.py  test_monitor_state.py  test_orchestration.py  test_pending_session.py  test_plan.py  test_search.py  test_session.py  test_stats.py  test_worktree.py  test_ws_messages.py
tests/test_services/: test_codex_jsonl_parser.py  test_file_watcher.py  test_git_diff.py  test_jsonl_parser.py  test_metadata_store.py  test_path_utils.py  test_process_registry.py  test_proxy_service.py  test_search_scoring.py  test_session_parse_cache.py
(+81 files in other folders)
